fix alignment issue when transitioning between routes

--- a/src/js/components/ui.css
+++ b/src/js/components/ui.css
@@ -44,6 +44,7 @@
 
   &__container{
     position: relative;
+    align-self: stretch;
   }
 
   &__section{
